--- a/src/components/Search.module.css
+++ b/src/components/Search.module.css
@@ -11,9 +11,8 @@
 
 .searchButton {
   position: absolute;
-  right: 0;
+  right: 8px;
   top: 0;
-  cursor: pointer;
   height: 100%;
   border: none;
   background: none;
