--- a/src/pages/MovieDetails.module.css
+++ b/src/pages/MovieDetails.module.css
@@ -7,13 +7,14 @@
 
 .col{
     max-width: 40rem;
-    margin: 1.5rem;
+    margin: 1.5rem 0;
     height: auto;
     height: 80%;
 }
 
 .movieImage{
     border-radius: 1.5rem;
+    max-width: 80%;
 }
 
 .movieDetails{
@@ -23,3 +24,17 @@
 .firstItem{
     margin-top: 0;
 }
+
+
+/*@media (max-width: 640px){
+    .detailsContainer{
+        max-width: 95%;
+    }
+    .movieImage{
+        max-width: 95%;
+        height: auto;
+        padding: 2rem;
+        border-radius: 1.5rem;
+    }
+    
+}*/
